--- a/ChallangeWeek02/StickyNotes/style/style.css
+++ b/ChallangeWeek02/StickyNotes/style/style.css
@@ -1,12 +1,81 @@
-.body { 
-    background-color: rgba(198, 140, 83, 0.66);
 
-}
 .main { 
     position: fixed;
     z-index: 1;
     width: 100%;
     min-height: 100vh;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #c68c53a8;
+
 }
+
+
+.header_left { 
+    text-shadow: 1px 1px black;
+    font-family: 'Architects Daughter', cursive;
+    color: white;
+    margin-left: 20px;
+    margin-top: -20px;
+}
+.header_left i { 
+    color: #c2ff3d;
+    font-size: 2em;
+    display: inline-block;
+
+}
+
+.header_left h1 { 
+    display: inline-block;
+    font-size: 2em;
+
+}
+
+.header_right  {
+    font-family: 'Architects Daughter', cursive;
+    box-sizing: border-box;
+    margin-top: -55px;
+    margin-left: 90%;
+
+
+}
+
+.header_right button { 
+    padding: 8px;
+    outline: none;
+    cursor: pointer;
+    font-family: inherit;
+    border-radius: 5px;
+    background: whitesmoke;
+    border: 1px solid lightgray;
+}
+
+
+.note_box { 
+    width: 276px;
+    height: 276px;
+    padding: 25px;
+    outline: none;
+    resize: none;
+    font-size: 1.5rem;
+    font-family: inherit;
+    box-shadow: 0px 2px 4px 0px rgb(0 0 0 / 90%);
+    background-color: white;
+    margin-left: 35%;
+    margin-top:40px;
+}
+
+.note_box i { 
+    position: absolute;
+    left: 57%;
+    font-size: 1.4rem;
+    color: gray;
+    cursor: pointer;
+    transition: 1s ease-in-out;
+}
+
+.note_box textarea { 
+  border: none;
+  font-size: 0.8em;
+}
+
+
 
